--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
+astroid==2.4.2
 beautifulsoup4==4.6.0
 certifi==2018.1.18
 chardet==3.0.4
 idna==2.6
+isort==5.5.1
+Jinja2==2.11.3
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
 pycountry==18.2.23
+pylint==2.6.0
 requests==2.21.0
 requests-cache==0.5.2
+six==1.15.0
+toml==0.10.1
+typed-ast==1.4.1
 urllib3==1.24.3
+wrapt==1.12.1
