--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
-astroid==2.4.2
-beautifulsoup4==4.6.0
-certifi==2018.1.18
-chardet==3.0.4
-idna==2.6
-isort==5.5.1
+astroid==2.5.1
+beautifulsoup4==4.9.3
+certifi==2020.12.5
+chardet==4.0.0
+idna==2.10
+isort==5.8.0
+itsdangerous==1.1.0
 Jinja2==2.11.3
-lazy-object-proxy==1.4.3
+lazy-object-proxy==1.6.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
-pycountry==18.2.23
-pylint==2.6.0
-requests==2.21.0
-requests-cache==0.5.2
+pycountry==20.7.3
+pylint==2.7.2
+requests==2.25.1
+requests-cache==0.6.2
 six==1.15.0
-toml==0.10.1
-typed-ast==1.4.1
-urllib3==1.24.3
+soupsieve==2.2.1
+toml==0.10.2
+typed-ast==1.4.2
+url-normalize==1.4.3
+urllib3==1.26.4
 wrapt==1.12.1
