--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,19 @@
-astroid==2.5.1
-beautifulsoup4==4.9.3
-certifi==2020.12.5
-chardet==4.0.0
-idna==2.10
-isort==5.8.0
-itsdangerous==1.1.0
-Jinja2==2.11.3
-lazy-object-proxy==1.6.0
-MarkupSafe==1.1.1
-mccabe==0.6.1
-pycountry==20.7.3
-pylint==2.7.2
-requests==2.25.1
-requests-cache==0.6.2
-six==1.15.0
-soupsieve==2.2.1
-toml==0.10.2
-typed-ast==1.4.2
+appdirs==1.4.4
+attrs==22.1.0
+beautifulsoup4==4.11.1
+bs4==0.0.1
+cattrs==22.1.0
+certifi==2022.9.24
+charset-normalizer==2.1.1
+exceptiongroup==1.0.0rc9
+idna==3.4
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+pycountry==22.3.5
+requests==2.28.1
+requests-cache==0.9.6
+six==1.16.0
+soupsieve==2.3.2.post1
 url-normalize==1.4.3
-urllib3==1.26.5
+urllib3==1.26.12
 wrapt==1.12.1
