--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 astroid==2.5.1
 beautifulsoup4==4.9.3
 black==22.10.0
-certifi==2022.12.7
+certifi==2020.12.5
 chardet==4.0.0
 click==8.1.3
 idna==2.10
@@ -26,6 +26,7 @@ soupsieve==2.2.1
 toml==0.10.2
 tomli==2.0.1
 typed-ast==1.5.4
+types-Pillow==9.3.0.4
 types-requests==2.28.11.4
 types-urllib3==1.26.25.3
 typing_extensions==4.4.0
