--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 astroid==2.5.1
+attrs==23.2.0
 beautifulsoup4==4.9.3
 black==22.10.0
+cattrs==23.2.3
 certifi==2023.7.22
 chardet==4.0.0
+charset-normalizer==3.3.0
 click==8.1.3
+exceptiongroup==1.2.1
 idna==2.10
 install==1.3.5
 isort==5.8.0
@@ -19,8 +23,10 @@ Pillow==10.0.1
 platformdirs==2.5.4
 pycountry==20.7.3
 pylint==2.7.2
-requests==2.31.0
-requests-cache==0.6.2
+pypng==0.20220715.0
+qrcode==7.4.2
+requests==2.32.3
+requests-cache==1.2.1
 six==1.15.0
 soupsieve==2.2.1
 toml==0.10.2
@@ -31,5 +37,5 @@ types-requests==2.28.11.4
 types-urllib3==1.26.25.3
 typing_extensions==4.4.0
 url-normalize==1.4.3
-urllib3==1.26.18
+urllib3==2.2.2
 wrapt==1.12.1
