--- a/requirements.txt
+++ b/requirements.txt
@@ -9,17 +9,16 @@ charset-normalizer==3.3.0
 click==8.1.3
 exceptiongroup==1.2.1
 idna==3.7
-install==1.3.5
 isort==5.8.0
 itsdangerous==1.1.0
 Jinja2==3.1.4
 lazy-object-proxy==1.6.0
-MarkupSafe==1.1.1
+MarkupSafe>=1.1.1
 mccabe==0.6.1
 mypy==0.990
 mypy-extensions==0.4.3
 pathspec==0.10.2
-Pillow==10.0.1
+Pillow>=10.0.1
 platformdirs==2.5.4
 pycountry==20.7.3
 pylint==2.7.2
@@ -31,11 +30,10 @@ six==1.15.0
 soupsieve==2.2.1
 toml==0.10.2
 tomli==2.0.1
-typed-ast==1.5.4
 types-Pillow==9.3.0.4
 types-requests==2.28.11.4
 types-urllib3==1.26.25.3
 typing_extensions==4.4.0
 url-normalize==1.4.3
 urllib3==2.2.2
-wrapt==1.12.1
+wrapt>=1.12.1
