--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,43 @@
-astroid==2.5.1
-attrs==23.2.0
-beautifulsoup4==4.9.3
-black==24.3.0
-certifi==2023.7.22
-cattrs==23.2.3
-chardet==4.0.0
-charset-normalizer==3.3.0
-click==8.1.3
-exceptiongroup==1.2.1
-idna==3.7
-isort==5.8.0
-itsdangerous==1.1.0
+astroid==3.3.8
+attrs==24.3.0
+beautifulsoup4==4.12.3
+black==24.10.0
+cattrs==24.1.2
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.8
+cryptography==44.0.0
+dill==0.3.9
+idna==3.10
+isort==5.13.2
 Jinja2==3.1.5
-lazy-object-proxy==1.6.0
-MarkupSafe>=1.1.1
-mccabe==0.6.1
-mypy==0.990
-mypy-extensions==0.4.3
-pathspec==0.10.2
-Pillow>=10.3.0
-platformdirs==2.5.4
-pycountry==20.7.3
-pylint==2.7.2
-pypng==0.20220715.0
-qrcode==7.4.2
+MarkupSafe==3.0.2
+mccabe==0.7.0
+mypy==1.14.0
+mypy-extensions==1.0.0
+packaging==24.2
+pathspec==0.12.1
+pillow==11.0.0
+platformdirs==4.3.6
+pycountry==24.6.1
+pycparser==2.22
+pylint==3.3.3
+qrcode==8.0
 requests==2.32.3
 requests-cache==1.2.1
-six==1.15.0
-soupsieve==2.2.1
-toml==0.10.2
-tomli==2.0.1
-types-Pillow==9.3.0.4
-types-requests==2.28.11.4
-types-urllib3==1.26.25.3
-typing_extensions==4.4.0
+six==1.17.0
+soupsieve==2.6
+tomlkit==0.13.2
+types-beautifulsoup4==4.12.0.20241020
+types-cffi==1.16.0.20241221
+types-html5lib==1.1.11.20241018
+types-pyOpenSSL==24.1.0.20240722
+types-PyYAML==6.0.12.20241221
+types-redis==4.6.0.20241004
+types-requests==2.32.0.20241016
+types-setuptools==75.6.0.20241223
+types-ujson==5.10.0.20240515
+typing_extensions==4.12.2
 url-normalize==1.4.3
-urllib3==2.2.2
-wrapt>=1.12.1
+urllib3==2.3.0
