added security scanning updated some libraries to remove warnings cleaned up makefile added commands to checkpoint the output and testoutput directories added a way to check the output directory against the last known good version for validation

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,13 @@
 __pycache__/
 *.pyc
 output/
+lkgoutput/
 testoutput/
+lkgtestoutput/
 .DS_Store
 venv
 cache.sqlite
 http_cache.sqlite
 photos/
 data/contact_me.json
+working_files/
