--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,96 @@
-astroid==3.3.8
-attrs==24.3.0
-beautifulsoup4==4.12.3
-black==24.10.0
-cattrs==24.1.2
-certifi==2024.12.14
+annotated-types==0.7.0
+anyio==4.9.0
+appdirs==1.4.4
+astroid==2.5.1
+attrs==22.1.0
+Authlib==1.6.0
+backports-datetime-fromisoformat==2.0.3
+bandit==1.8.3
+beautifulsoup4==4.9.3
+black==22.10.0
+blinker==1.5
+boolean.py==5.0
+CacheControl==0.14.3
+cattrs==22.2.0
+certifi==2020.12.5
 cffi==1.17.1
-charset-normalizer==3.4.0
-click==8.1.8
-cryptography==44.0.0
-dill==0.3.9
-idna==3.10
-isort==5.13.2
-Jinja2==3.1.5
+chardet==4.0.0
+charset-normalizer==2.1.1
+click==8.1.3
+cryptography==45.0.4
+cyclonedx-python-lib==9.1.0
+defusedxml==0.7.1
+dparse==0.6.4
+exceptiongroup==1.3.0
+filelock==3.16.1
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==2.10
+isort==5.8.0
+itsdangerous==1.1.0
+Jinja2==3.1.6
+joblib==1.5.1
+lazy-object-proxy==1.6.0
+license-expression==30.4.1
+Markdown==3.4.1
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-mccabe==0.7.0
-mypy==1.14.0
-mypy-extensions==1.0.0
-packaging==24.2
-pathspec==0.12.1
-pillow==11.0.0
-platformdirs==4.3.6
-pycountry==24.6.1
+marshmallow==4.0.0
+mccabe==0.6.1
+mdurl==0.1.2
+msgpack==1.1.1
+mypy==0.990
+mypy-extensions==0.4.3
+natsort==8.2.0
+nltk==3.9.1
+packageurl-python==0.17.1
+packaging==25.0
+pathspec==0.10.2
+pbr==6.1.1
+pilkit==2.0
+Pillow==9.3.0
+pip-api==0.0.34
+pip-requirements-parser==32.0.1
+pip_audit==2.9.0
+platformdirs==4.3.8
+psutil==6.1.1
+py-serializable==2.0.0
+pycountry==20.7.3
 pycparser==2.22
-pylint==3.3.3
-qrcode==8.0
-requests==2.32.3
-requests-cache==1.2.1
-six==1.17.0
-soupsieve==2.6
-tomlkit==0.13.2
-types-beautifulsoup4==4.12.0.20241020
-types-cffi==1.16.0.20241221
-types-html5lib==1.1.11.20241018
-types-pyOpenSSL==24.1.0.20240722
-types-PyYAML==6.0.12.20241221
-types-redis==4.6.0.20241004
-types-requests==2.32.0.20241016
-types-setuptools==75.6.0.20241223
-types-ujson==5.10.0.20240515
-typing_extensions==4.12.2
+pydantic==2.9.2
+pydantic_core==2.23.4
+Pygments==2.19.1
+pylint==2.7.2
+pyparsing==3.2.3
+pypng==0.20220715.0
+PyYAML==6.0.2
+qrcode==7.4.2
+regex==2024.11.6
+requests==2.32.4
+requests-cache==0.9.7
+rich==14.0.0
+ruamel.yaml==0.18.14
+ruamel.yaml.clib==0.2.12
+safety==3.5.2
+safety-schemas==0.0.14
+shellingham==1.5.4
+sigal @ git+https://github.com/kevingoldsmith/sigal.git@fb22dda343b5661e99f5b460b60a49d083baa1f3
+six==1.15.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.2.1
+stevedore==5.4.1
+tenacity==9.1.2
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.13.3
+tqdm==4.67.1
+typed-ast==1.5.4
+typer==0.16.0
+types-requests==2.28.11.4
+types-urllib3==1.26.25.3
+typing_extensions==4.14.0
 url-normalize==1.4.3
-urllib3==2.3.0
+urllib3==1.26.5
+wrapt==1.12.1
