--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ packaging==25.0
 pathspec==0.10.2
 pbr==6.1.1
 pilkit==2.0
-Pillow==9.3.0
+Pillow>=9.3.0
 pip-api==0.0.34
 pip-requirements-parser==32.0.1
 pip_audit==2.9.0
@@ -68,14 +68,13 @@ PyYAML==6.0.2
 qrcode==7.4.2
 regex==2024.11.6
 requests==2.32.4
-requests-cache==1.2.1
+requests-cache>=1.2.1
 rich==14.0.0
 ruamel.yaml==0.18.14
 ruamel.yaml.clib==0.2.12
 safety==3.5.2
 safety-schemas==0.0.14
 shellingham==1.5.4
-sigal @ git+https://github.com/kevingoldsmith/sigal.git@fb22dda343b5661e99f5b460b60a49d083baa1f3
 six==1.15.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
@@ -86,8 +85,8 @@ toml==0.10.2
 tomli==2.0.1
 tomlkit==0.13.3
 tqdm==4.67.1
-typed-ast==1.5.4
-typer==0.16.0
+#typed-ast>=1.5.4
+typer>=0.16.0
 types-requests==2.28.11.4
 types-urllib3==1.26.25.3
 typing_extensions==4.14.0
